CppFuncDef_2014/CppFuncDef/obj/Debug/CppFuncDefParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.2.2-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from F:\KU\Documents\Docxes_Txts_Pdfs\compilation\CppFuncDef\CppFuncDef\CppFuncDef.g4 by ANTLR 4.2.2-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace CppFuncDef {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.2.2-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class CppFuncDefParser : Parser {
	public const int
		WS=1, ANDTOKEN=2, ORTOKEN=3, EQUALTOKEN=4, LESSEQUAL=5, MOREEQUAL=6, NEGEQUAL=7, 
		ADDASSIGN=8, SUBASSIGN=9, MULASSIGN=10, DIVASSIGN=11, NEGTOKEN=12, PLUSTOKEN=13, 
		SUBTOKEN=14, DIVTOKEN=15, ASSIGNTOKEN=16, LESSTOKEN=17, MORETOKEN=18, 
		STAR=19, SEMICOLON=20, COMMA=21, ANDSINGLE=22, ORSINGLE=23, LEFTBRACKET=24, 
		RIGHTBRACKET=25, LEFTPAREN=26, RIGHTPAREN=27, CH=28, STR=29, WHILETOKEN=30, 
		FORTOKEN=31, RETURNTOKEN=32, VOIDTOKEN=33, BREAKTOKEN=34, CONTINUETOKEN=35, 
		DATATYPE=36, ID=37, CALLINGCONV=38, FIG=39, CONTIINUETOKEN=40;
	public static readonly string[] tokenNames = {
		"<INVALID>", "WS", "'&&'", "'||'", "'=='", "'<='", "'>='", "'!='", "'+='", 
		"'-='", "'*='", "'/='", "'!'", "'+'", "'-'", "'/'", "'='", "'<'", "'>'", 
		"'*'", "';'", "','", "'&'", "'|'", "'{'", "'}'", "'('", "')'", "CH", "STR", 
		"'while'", "'for'", "'return'", "'void'", "'break'", "'continue'", "DATATYPE", 
		"ID", "CALLINGCONV", "FIG", "CONTIINUETOKEN"
	};
	public const int
		RULE_cppFunction = 0, RULE_declarORassign = 1, RULE_expression = 2, RULE_whileStruct = 3, 
		RULE_forStruct = 4;
	public static readonly string[] ruleNames = {
		"cppFunction", "declarORassign", "expression", "whileStruct", "forStruct"
	};

	public override string GrammarFileName { get { return "CppFuncDef.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


		protected const int EOF = Eof;

	public CppFuncDefParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CppFunctionContext : ParserRuleContext {
		public ITerminalNode RETURNTOKEN(int i) {
			return GetToken(CppFuncDefParser.RETURNTOKEN, i);
		}
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(CppFuncDefParser.SEMICOLON, i);
		}
		public ITerminalNode RIGHTBRACKET() { return GetToken(CppFuncDefParser.RIGHTBRACKET, 0); }
		public ForStructContext forStruct(int i) {
			return GetRuleContext<ForStructContext>(i);
		}
		public ITerminalNode[] DATATYPE() { return GetTokens(CppFuncDefParser.DATATYPE); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ITerminalNode[] STAR() { return GetTokens(CppFuncDefParser.STAR); }
		public ForStructContext[] forStruct() {
			return GetRuleContexts<ForStructContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public DeclarORassignContext declarORassign(int i) {
			return GetRuleContext<DeclarORassignContext>(i);
		}
		public ITerminalNode LEFTPAREN() { return GetToken(CppFuncDefParser.LEFTPAREN, 0); }
		public ITerminalNode STAR(int i) {
			return GetToken(CppFuncDefParser.STAR, i);
		}
		public DeclarORassignContext[] declarORassign() {
			return GetRuleContexts<DeclarORassignContext>();
		}
		public ITerminalNode ID(int i) {
			return GetToken(CppFuncDefParser.ID, i);
		}
		public WhileStructContext[] whileStruct() {
			return GetRuleContexts<WhileStructContext>();
		}
		public ITerminalNode[] SEMICOLON() { return GetTokens(CppFuncDefParser.SEMICOLON); }
		public ITerminalNode[] ID() { return GetTokens(CppFuncDefParser.ID); }
		public ITerminalNode COMMA(int i) {
			return GetToken(CppFuncDefParser.COMMA, i);
		}
		public ITerminalNode LEFTBRACKET() { return GetToken(CppFuncDefParser.LEFTBRACKET, 0); }
		public ITerminalNode RIGHTPAREN() { return GetToken(CppFuncDefParser.RIGHTPAREN, 0); }
		public WhileStructContext whileStruct(int i) {
			return GetRuleContext<WhileStructContext>(i);
		}
		public ITerminalNode[] RETURNTOKEN() { return GetTokens(CppFuncDefParser.RETURNTOKEN); }
		public ITerminalNode VOIDTOKEN() { return GetToken(CppFuncDefParser.VOIDTOKEN, 0); }
		public ITerminalNode[] COMMA() { return GetTokens(CppFuncDefParser.COMMA); }
		public ITerminalNode DATATYPE(int i) {
			return GetToken(CppFuncDefParser.DATATYPE, i);
		}
		public ITerminalNode CALLINGCONV() { return GetToken(CppFuncDefParser.CALLINGCONV, 0); }
		public CppFunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_cppFunction; }
		public override void EnterRule(IParseTreeListener listener) {
			ICppFuncDefListener typedListener = listener as ICppFuncDefListener;
			if (typedListener != null) typedListener.EnterCppFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppFuncDefListener typedListener = listener as ICppFuncDefListener;
			if (typedListener != null) typedListener.ExitCppFunction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICppFuncDefVisitor<TResult> typedVisitor = visitor as ICppFuncDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCppFunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CppFunctionContext cppFunction() {
		CppFunctionContext _localctx = new CppFunctionContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_cppFunction);
		int _la;
		try {
			int _alt;
			State = 135;
			switch (_input.La(1)) {
			case DATATYPE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 10; Match(DATATYPE);
				State = 14;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==STAR) {
					{
					{
					State = 11; Match(STAR);
					}
					}
					State = 16;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 18;
				_la = _input.La(1);
				if (_la==CALLINGCONV) {
					{
					State = 17; Match(CALLINGCONV);
					}
				}

				State = 20; Match(ID);
				State = 21; Match(LEFTPAREN);
				State = 44;
				_la = _input.La(1);
				if (_la==DATATYPE) {
					{
					State = 22; Match(DATATYPE);
					State = 26;
					_errHandler.Sync(this);
					_la = _input.La(1);
					while (_la==STAR) {
						{
						{
						State = 23; Match(STAR);
						}
						}
						State = 28;
						_errHandler.Sync(this);
						_la = _input.La(1);
					}
					State = 29; Match(ID);
					State = 41;
					_errHandler.Sync(this);
					_la = _input.La(1);
					while (_la==COMMA) {
						{
						{
						State = 30; Match(COMMA);
						State = 31; Match(DATATYPE);
						State = 35;
						_errHandler.Sync(this);
						_la = _input.La(1);
						while (_la==STAR) {
							{
							{
							State = 32; Match(STAR);
							}
							}
							State = 37;
							_errHandler.Sync(this);
							_la = _input.La(1);
						}
						State = 38; Match(ID);
						}
						}
						State = 43;
						_errHandler.Sync(this);
						_la = _input.La(1);
					}
					}
				}

				State = 46; Match(RIGHTPAREN);
				State = 47; Match(LEFTBRACKET);
				State = 62;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=ATN.InvalidAltNumber ) {
					if ( _alt==1 ) {
						{
						State = 60;
						switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
						case 1:
							{
							State = 48; declarORassign();
							State = 49; Match(SEMICOLON);
							}
							break;

						case 2:
							{
							State = 51; expression(0);
							State = 52; Match(SEMICOLON);
							}
							break;

						case 3:
							{
							State = 54; Match(RETURNTOKEN);
							State = 55; expression(0);
							State = 56; Match(SEMICOLON);
							}
							break;

						case 4:
							{
							State = 58; whileStruct();
							}
							break;

						case 5:
							{
							State = 59; forStruct();
							}
							break;
						}
						} 
					}
					State = 64;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,7,_ctx);
				}
				State = 65; Match(RETURNTOKEN);
				State = 66; expression(0);
				State = 67; Match(SEMICOLON);
				State = 82;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEGTOKEN) | (1L << LEFTPAREN) | (1L << CH) | (1L << STR) | (1L << WHILETOKEN) | (1L << FORTOKEN) | (1L << RETURNTOKEN) | (1L << DATATYPE) | (1L << ID) | (1L << FIG))) != 0)) {
					{
					State = 80;
					switch ( Interpreter.AdaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						State = 68; declarORassign();
						State = 69; Match(SEMICOLON);
						}
						break;

					case 2:
						{
						State = 71; expression(0);
						State = 72; Match(SEMICOLON);
						}
						break;

					case 3:
						{
						State = 74; Match(RETURNTOKEN);
						State = 75; expression(0);
						State = 76; Match(SEMICOLON);
						}
						break;

					case 4:
						{
						State = 78; whileStruct();
						}
						break;

					case 5:
						{
						State = 79; forStruct();
						}
						break;
					}
					}
					State = 84;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 85; Match(RIGHTBRACKET);
				}
				break;
			case VOIDTOKEN:
				EnterOuterAlt(_localctx, 2);
				{
				State = 87; Match(VOIDTOKEN);
				State = 89;
				_la = _input.La(1);
				if (_la==CALLINGCONV) {
					{
					State = 88; Match(CALLINGCONV);
					}
				}

				State = 91; Match(ID);
				State = 92; Match(LEFTPAREN);
				State = 115;
				_la = _input.La(1);
				if (_la==DATATYPE) {
					{
					State = 93; Match(DATATYPE);
					State = 97;
					_errHandler.Sync(this);
					_la = _input.La(1);
					while (_la==STAR) {
						{
						{
						State = 94; Match(STAR);
						}
						}
						State = 99;
						_errHandler.Sync(this);
						_la = _input.La(1);
					}
					State = 100; Match(ID);
					State = 112;
					_errHandler.Sync(this);
					_la = _input.La(1);
					while (_la==COMMA) {
						{
						{
						State = 101; Match(COMMA);
						State = 102; Match(DATATYPE);
						State = 106;
						_errHandler.Sync(this);
						_la = _input.La(1);
						while (_la==STAR) {
							{
							{
							State = 103; Match(STAR);
							}
							}
							State = 108;
							_errHandler.Sync(this);
							_la = _input.La(1);
						}
						State = 109; Match(ID);
						}
						}
						State = 114;
						_errHandler.Sync(this);
						_la = _input.La(1);
					}
					}
				}

				State = 117; Match(RIGHTPAREN);
				State = 118; Match(LEFTBRACKET);
				State = 131;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEGTOKEN) | (1L << LEFTPAREN) | (1L << CH) | (1L << STR) | (1L << WHILETOKEN) | (1L << FORTOKEN) | (1L << RETURNTOKEN) | (1L << DATATYPE) | (1L << ID) | (1L << FIG))) != 0)) {
					{
					State = 129;
					switch ( Interpreter.AdaptivePredict(_input,15,_ctx) ) {
					case 1:
						{
						State = 119; declarORassign();
						State = 120; Match(SEMICOLON);
						}
						break;

					case 2:
						{
						State = 122; expression(0);
						State = 123; Match(SEMICOLON);
						}
						break;

					case 3:
						{
						State = 125; Match(RETURNTOKEN);
						State = 126; Match(SEMICOLON);
						}
						break;

					case 4:
						{
						State = 127; whileStruct();
						}
						break;

					case 5:
						{
						State = 128; forStruct();
						}
						break;
					}
					}
					State = 133;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 134; Match(RIGHTBRACKET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarORassignContext : ParserRuleContext {
		public ITerminalNode DIVASSIGN() { return GetToken(CppFuncDefParser.DIVASSIGN, 0); }
		public ITerminalNode SUBASSIGN() { return GetToken(CppFuncDefParser.SUBASSIGN, 0); }
		public ITerminalNode ADDASSIGN() { return GetToken(CppFuncDefParser.ADDASSIGN, 0); }
		public ITerminalNode MULASSIGN() { return GetToken(CppFuncDefParser.MULASSIGN, 0); }
		public ITerminalNode ID() { return GetToken(CppFuncDefParser.ID, 0); }
		public ITerminalNode DATATYPE() { return GetToken(CppFuncDefParser.DATATYPE, 0); }
		public ITerminalNode ASSIGNTOKEN() { return GetToken(CppFuncDefParser.ASSIGNTOKEN, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public DeclarORassignContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_declarORassign; }
		public override void EnterRule(IParseTreeListener listener) {
			ICppFuncDefListener typedListener = listener as ICppFuncDefListener;
			if (typedListener != null) typedListener.EnterDeclarORassign(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppFuncDefListener typedListener = listener as ICppFuncDefListener;
			if (typedListener != null) typedListener.ExitDeclarORassign(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICppFuncDefVisitor<TResult> typedVisitor = visitor as ICppFuncDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclarORassign(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarORassignContext declarORassign() {
		DeclarORassignContext _localctx = new DeclarORassignContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_declarORassign);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148;
			switch ( Interpreter.AdaptivePredict(_input,20,_ctx) ) {
			case 1:
				{
				State = 138;
				_la = _input.La(1);
				if (_la==DATATYPE) {
					{
					State = 137; Match(DATATYPE);
					}
				}

				State = 140; Match(ID);
				State = 143;
				_la = _input.La(1);
				if (_la==ASSIGNTOKEN) {
					{
					State = 141; Match(ASSIGNTOKEN);
					State = 142; expression(0);
					}
				}

				}
				break;

			case 2:
				{
				State = 145; Match(ID);
				State = 146;
				_la = _input.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADDASSIGN) | (1L << SUBASSIGN) | (1L << MULASSIGN) | (1L << DIVASSIGN))) != 0)) ) {
				_errHandler.RecoverInline(this);
				}
				Consume();
				State = 147; expression(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ITerminalNode ORSINGLE() { return GetToken(CppFuncDefParser.ORSINGLE, 0); }
		public ITerminalNode ORTOKEN() { return GetToken(CppFuncDefParser.ORTOKEN, 0); }
		public ITerminalNode NEGEQUAL() { return GetToken(CppFuncDefParser.NEGEQUAL, 0); }
		public ITerminalNode FIG() { return GetToken(CppFuncDefParser.FIG, 0); }
		public ITerminalNode ID() { return GetToken(CppFuncDefParser.ID, 0); }
		public ITerminalNode SUBTOKEN() { return GetToken(CppFuncDefParser.SUBTOKEN, 0); }
		public ITerminalNode MOREEQUAL() { return GetToken(CppFuncDefParser.MOREEQUAL, 0); }
		public ITerminalNode MORETOKEN() { return GetToken(CppFuncDefParser.MORETOKEN, 0); }
		public ITerminalNode STAR() { return GetToken(CppFuncDefParser.STAR, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ITerminalNode CH() { return GetToken(CppFuncDefParser.CH, 0); }
		public ITerminalNode LESSTOKEN() { return GetToken(CppFuncDefParser.LESSTOKEN, 0); }
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode RIGHTPAREN() { return GetToken(CppFuncDefParser.RIGHTPAREN, 0); }
		public ITerminalNode EQUALTOKEN() { return GetToken(CppFuncDefParser.EQUALTOKEN, 0); }
		public ITerminalNode STR() { return GetToken(CppFuncDefParser.STR, 0); }
		public ITerminalNode PLUSTOKEN() { return GetToken(CppFuncDefParser.PLUSTOKEN, 0); }
		public ITerminalNode LEFTPAREN() { return GetToken(CppFuncDefParser.LEFTPAREN, 0); }
		public ITerminalNode LESSEQUAL() { return GetToken(CppFuncDefParser.LESSEQUAL, 0); }
		public ITerminalNode ANDSINGLE() { return GetToken(CppFuncDefParser.ANDSINGLE, 0); }
		public ITerminalNode ANDTOKEN() { return GetToken(CppFuncDefParser.ANDTOKEN, 0); }
		public ITerminalNode DIVTOKEN() { return GetToken(CppFuncDefParser.DIVTOKEN, 0); }
		public ITerminalNode NEGTOKEN() { return GetToken(CppFuncDefParser.NEGTOKEN, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_expression; }
		public override void EnterRule(IParseTreeListener listener) {
			ICppFuncDefListener typedListener = listener as ICppFuncDefListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppFuncDefListener typedListener = listener as ICppFuncDefListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICppFuncDefVisitor<TResult> typedVisitor = visitor as ICppFuncDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		return expression(0);
	}

	private ExpressionContext expression(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 161;
			switch (_input.La(1)) {
			case NEGTOKEN:
				{
				State = 151; Match(NEGTOKEN);
				State = 152; expression(1);
				}
				break;
			case LEFTPAREN:
				{
				State = 153; Match(LEFTPAREN);
				State = 154; expression(0);
				State = 155; Match(RIGHTPAREN);
				}
				break;
			case ID:
				{
				State = 157; Match(ID);
				}
				break;
			case FIG:
				{
				State = 158; Match(FIG);
				}
				break;
			case CH:
				{
				State = 159; Match(CH);
				}
				break;
			case STR:
				{
				State = 160; Match(STR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.Lt(-1);
			State = 174;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,23,_ctx);
			while ( _alt!=2 && _alt!=ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 172;
					switch ( Interpreter.AdaptivePredict(_input,22,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 163;
						if (!(Precpred(_ctx, 9))) throw new FailedPredicateException(this, "Precpred(_ctx, 9)");
						State = 164;
						_la = _input.La(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUALTOKEN) | (1L << LESSEQUAL) | (1L << MOREEQUAL) | (1L << NEGEQUAL) | (1L << LESSTOKEN) | (1L << MORETOKEN))) != 0)) ) {
						_errHandler.RecoverInline(this);
						}
						Consume();
						State = 165; expression(10);
						}
						break;

					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 166;
						if (!(Precpred(_ctx, 8))) throw new FailedPredicateException(this, "Precpred(_ctx, 8)");
						State = 167;
						_la = _input.La(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUSTOKEN) | (1L << SUBTOKEN) | (1L << DIVTOKEN) | (1L << STAR))) != 0)) ) {
						_errHandler.RecoverInline(this);
						}
						Consume();
						State = 168; expression(9);
						}
						break;

					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 169;
						if (!(Precpred(_ctx, 7))) throw new FailedPredicateException(this, "Precpred(_ctx, 7)");
						State = 170;
						_la = _input.La(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ANDTOKEN) | (1L << ORTOKEN) | (1L << ANDSINGLE) | (1L << ORSINGLE))) != 0)) ) {
						_errHandler.RecoverInline(this);
						}
						Consume();
						State = 171; expression(8);
						}
						break;
					}
					} 
				}
				State = 176;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,23,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class WhileStructContext : ParserRuleContext {
		public WhileStructContext[] whileStruct() {
			return GetRuleContexts<WhileStructContext>();
		}
		public ITerminalNode CONTINUETOKEN(int i) {
			return GetToken(CppFuncDefParser.CONTINUETOKEN, i);
		}
		public ITerminalNode[] SEMICOLON() { return GetTokens(CppFuncDefParser.SEMICOLON); }
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(CppFuncDefParser.SEMICOLON, i);
		}
		public ITerminalNode RIGHTBRACKET() { return GetToken(CppFuncDefParser.RIGHTBRACKET, 0); }
		public ForStructContext forStruct(int i) {
			return GetRuleContext<ForStructContext>(i);
		}
		public ForStructContext[] forStruct() {
			return GetRuleContexts<ForStructContext>();
		}
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode LEFTBRACKET() { return GetToken(CppFuncDefParser.LEFTBRACKET, 0); }
		public DeclarORassignContext declarORassign(int i) {
			return GetRuleContext<DeclarORassignContext>(i);
		}
		public ITerminalNode WHILETOKEN() { return GetToken(CppFuncDefParser.WHILETOKEN, 0); }
		public ITerminalNode RIGHTPAREN() { return GetToken(CppFuncDefParser.RIGHTPAREN, 0); }
		public WhileStructContext whileStruct(int i) {
			return GetRuleContext<WhileStructContext>(i);
		}
		public ITerminalNode[] CONTINUETOKEN() { return GetTokens(CppFuncDefParser.CONTINUETOKEN); }
		public ITerminalNode LEFTPAREN() { return GetToken(CppFuncDefParser.LEFTPAREN, 0); }
		public DeclarORassignContext[] declarORassign() {
			return GetRuleContexts<DeclarORassignContext>();
		}
		public ITerminalNode BREAKTOKEN(int i) {
			return GetToken(CppFuncDefParser.BREAKTOKEN, i);
		}
		public ITerminalNode[] BREAKTOKEN() { return GetTokens(CppFuncDefParser.BREAKTOKEN); }
		public WhileStructContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_whileStruct; }
		public override void EnterRule(IParseTreeListener listener) {
			ICppFuncDefListener typedListener = listener as ICppFuncDefListener;
			if (typedListener != null) typedListener.EnterWhileStruct(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppFuncDefListener typedListener = listener as ICppFuncDefListener;
			if (typedListener != null) typedListener.ExitWhileStruct(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICppFuncDefVisitor<TResult> typedVisitor = visitor as ICppFuncDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileStruct(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileStructContext whileStruct() {
		WhileStructContext _localctx = new WhileStructContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_whileStruct);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 177; Match(WHILETOKEN);
			State = 178; Match(LEFTPAREN);
			State = 179; expression(0);
			State = 180; Match(RIGHTPAREN);
			State = 181; Match(LEFTBRACKET);
			State = 196;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEGTOKEN) | (1L << LEFTPAREN) | (1L << CH) | (1L << STR) | (1L << WHILETOKEN) | (1L << FORTOKEN) | (1L << BREAKTOKEN) | (1L << CONTINUETOKEN) | (1L << DATATYPE) | (1L << ID) | (1L << FIG))) != 0)) {
				{
				State = 194;
				switch ( Interpreter.AdaptivePredict(_input,24,_ctx) ) {
				case 1:
					{
					State = 182; declarORassign();
					State = 183; Match(SEMICOLON);
					}
					break;

				case 2:
					{
					State = 185; expression(0);
					State = 186; Match(SEMICOLON);
					}
					break;
